--- a/index.html
+++ b/index.html
@@ -1,10 +1,163 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>My Awesome Website</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Pioneers of Artificial Intelligence</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f3f4f6;
+            color: #1f2937;
+        }
+    </style>
 </head>
-<body>
-<h1>Hello, World!</h1>
-<p>Welcome to my first GitHub Pages website.</p>
+<body class="antialiased p-4 sm:p-8">
+    <div class="max-w-7xl mx-auto bg-white p-6 sm:p-10 rounded-3xl shadow-2xl">
+
+        <!-- Title Section -->
+        <header class="text-center mb-12">
+            <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold text-gray-900 leading-tight">
+                The Pioneers of Artificial Intelligence
+            </h1>
+        </header>
+
+        <!-- Opening Paragraph -->
+        <main class="mb-12 text-center text-lg sm:text-xl md:text-2xl text-gray-600 leading-relaxed max-w-4xl mx-auto">
+            <p>
+                To be a pioneer in artificial intelligence is to be a visionary who laid the foundational principles, charted new courses, and pushed the boundaries of what machines can do. These individuals, through their groundbreaking work, have fundamentally shaped our understanding of intelligence, computation, and the relationship between humans and machines, paving the way for the transformative technologies we see today.
+            </p>
+        </main>
+
+        <!-- Pioneers Grid -->
+        <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+            
+            <!-- Pioneer: Al-Khwarizmi -->
+            <div class="bg-gradient-to-br from-indigo-50 to-indigo-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
+                <img src="https://placehold.co/150x150/e0e7ff/4338ca?text=Al-Khwarizmi" alt="Picture of Al-Khwarizmi" class="w-32 h-32 rounded-full mb-4 ring-4 ring-indigo-300 object-cover">
+                <h2 class="text-2xl font-bold text-gray-800">Al-Khwarizmi</h2>
+                <p class="text-sm font-medium text-gray-500 mt-1">c. 780 - c. 850</p>
+                <a href="Khwarizimi.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-indigo-500 to-purple-600 text-white font-bold rounded-full shadow-lg hover:from-indigo-600 hover:to-purple-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-purple-300">
+                    View Interactive Slides
+                </a>
+            </div>
+
+            <!-- Pioneer: George Boole -->
+            <div class="bg-gradient-to-br from-blue-50 to-blue-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
+                <img src="https://placehold.co/150x150/dbeafe/1d4ed8?text=George+Boole" alt="Picture of George Boole" class="w-32 h-32 rounded-full mb-4 ring-4 ring-blue-300 object-cover">
+                <h2 class="text-2xl font-bold text-gray-800">George Boole</h2>
+                <p class="text-sm font-medium text-gray-500 mt-1">1815 - 1864</p>
+                <a href="Boole.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-blue-500 to-cyan-600 text-white font-bold rounded-full shadow-lg hover:from-blue-600 hover:to-cyan-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-blue-300">
+                    View Interactive Slides
+                </a>
+            </div>
+
+            <!-- Pioneer: Arthur Samuel -->
+            <div class="bg-gradient-to-br from-green-50 to-green-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
+                <img src="https://placehold.co/150x150/dcfce7/16a34a?text=Arthur+Samuel" alt="Picture of Arthur Samuel" class="w-32 h-32 rounded-full mb-4 ring-4 ring-green-300 object-cover">
+                <h2 class="text-2xl font-bold text-gray-800">Arthur Samuel</h2>
+                <p class="text-sm font-medium text-gray-500 mt-1">1901 - 1990</p>
+                <a href="Samuel.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-green-500 to-teal-600 text-white font-bold rounded-full shadow-lg hover:from-green-600 hover:to-teal-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-green-300">
+                    View Interactive Slides
+                </a>
+            </div>
+
+            <!-- Pioneer: Alan Turing -->
+            <div class="bg-gradient-to-br from-purple-50 to-purple-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
+                <img src="https://placehold.co/150x150/f3e8ff/7c3aed?text=Alan+Turing" alt="Picture of Alan Turing" class="w-32 h-32 rounded-full mb-4 ring-4 ring-purple-300 object-cover">
+                <h2 class="text-2xl font-bold text-gray-800">Alan Turing</h2>
+                <p class="text-sm font-medium text-gray-500 mt-1">1912 - 1954</p>
+                <a href="Turing.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-purple-500 to-pink-600 text-white font-bold rounded-full shadow-lg hover:from-purple-600 hover:to-pink-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-purple-300">
+                    View Interactive Slides
+                </a>
+            </div>
+
+            <!-- Pioneer: Herbert Simon -->
+            <div class="bg-gradient-to-br from-yellow-50 to-yellow-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
+                <img src="https://placehold.co/150x150/fef9c3/a16207?text=Herbert+Simon" alt="Picture of Herbert Simon" class="w-32 h-32 rounded-full mb-4 ring-4 ring-yellow-300 object-cover">
+                <h2 class="text-2xl font-bold text-gray-800">Herbert Simon</h2>
+                <p class="text-sm font-medium text-gray-500 mt-1">1916 - 2001</p>
+                <a href="Simon.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-yellow-500 to-orange-600 text-white font-bold rounded-full shadow-lg hover:from-yellow-600 hover:to-orange-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-yellow-300">
+                    View Interactive Slides
+                </a>
+            </div>
+
+            <!-- Pioneer: Joseph Weizenbaum -->
+            <div class="bg-gradient-to-br from-red-50 to-red-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
+                <img src="https://placehold.co/150x150/fee2e2/dc2626?text=Joseph+Weizenbaum" alt="Picture of Joseph Weizenbaum" class="w-32 h-32 rounded-full mb-4 ring-4 ring-red-300 object-cover">
+                <h2 class="text-2xl font-bold text-gray-800">Joseph Weizenbaum</h2>
+                <p class="text-sm font-medium text-gray-500 mt-1">1923 - 2008</p>
+                <a href="Weizenbaum.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-red-500 to-rose-600 text-white font-bold rounded-full shadow-lg hover:from-red-600 hover:to-rose-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-red-300">
+                    View Interactive Slides
+                </a>
+            </div>
+
+            <!-- Pioneer: Allen Newell -->
+            <div class="bg-gradient-to-br from-gray-50 to-gray-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
+                <img src="https://placehold.co/150x150/f1f5f9/4b5563?text=Allen+Newell" alt="Picture of Allen Newell" class="w-32 h-32 rounded-full mb-4 ring-4 ring-gray-300 object-cover">
+                <h2 class="text-2xl font-bold text-gray-800">Allen Newell</h2>
+                <p class="text-sm font-medium text-gray-500 mt-1">1927 - 1992</p>
+                <a href="Newell.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-gray-500 to-slate-600 text-white font-bold rounded-full shadow-lg hover:from-gray-600 hover:to-slate-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-gray-300">
+                    View Interactive Slides
+                </a>
+            </div>
+
+            <!-- Pioneer: John McCarthy -->
+            <div class="bg-gradient-to-br from-lime-50 to-lime-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
+                <img src="https://placehold.co/150x150/ecfccb/4d7c0f?text=John+McCarthy" alt="Picture of John McCarthy" class="w-32 h-32 rounded-full mb-4 ring-4 ring-lime-300 object-cover">
+                <h2 class="text-2xl font-bold text-gray-800">John McCarthy</h2>
+                <p class="text-sm font-medium text-gray-500 mt-1">1927 - 2011</p>
+                <a href="McCarthy.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-lime-500 to-emerald-600 text-white font-bold rounded-full shadow-lg hover:from-lime-600 hover:to-emerald-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-lime-300">
+                    View Interactive Slides
+                </a>
+            </div>
+
+            <!-- Pioneer: Marvin Minsky -->
+            <div class="bg-gradient-to-br from-cyan-50 to-cyan-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
+                <img src="https://placehold.co/150x150/cffafe/0891b2?text=Marvin+Minsky" alt="Picture of Marvin Minsky" class="w-32 h-32 rounded-full mb-4 ring-4 ring-cyan-300 object-cover">
+                <h2 class="text-2xl font-bold text-gray-800">Marvin Minsky</h2>
+                <p class="text-sm font-medium text-gray-500 mt-1">1927 - 2016</p>
+                <a href="Minsky.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-cyan-500 to-sky-600 text-white font-bold rounded-full shadow-lg hover:from-cyan-600 hover:to-sky-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-cyan-300">
+                    View Interactive Slides
+                </a>
+            </div>
+
+            <!-- Pioneer: Geoffrey Hinton -->
+            <div class="bg-gradient-to-br from-fuchsia-50 to-fuchsia-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
+                <img src="https://placehold.co/150x150/fdf4ff/a21caf?text=Geoffrey+Hinton" alt="Picture of Geoffrey Hinton" class="w-32 h-32 rounded-full mb-4 ring-4 ring-fuchsia-300 object-cover">
+                <h2 class="text-2xl font-bold text-gray-800">Geoffrey Hinton</h2>
+                <p class="text-sm font-medium text-gray-500 mt-1">1947 - Present</p>
+                <a href="Hinton.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-fuchsia-500 to-purple-600 text-white font-bold rounded-full shadow-lg hover:from-fuchsia-600 hover:to-purple-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-fuchsia-300">
+                    View Interactive Slides
+                </a>
+            </div>
+
+            <!-- Pioneer: Fei-Fei Li -->
+            <div class="bg-gradient-to-br from-sky-50 to-sky-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
+                <img src="https://placehold.co/150x150/e0f2fe/0284c7?text=Fei-Fei+Li" alt="Picture of Fei-Fei Li" class="w-32 h-32 rounded-full mb-4 ring-4 ring-sky-300 object-cover">
+                <h2 class="text-2xl font-bold text-gray-800">Fei-Fei Li</h2>
+                <p class="text-sm font-medium text-gray-500 mt-1">1976 - Present</p>
+                <a href="Li.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-sky-500 to-blue-600 text-white font-bold rounded-full shadow-lg hover:from-sky-600 hover:to-blue-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-sky-300">
+                    View Interactive Slides
+                </a>
+            </div>
+
+            <!-- Pioneer: Ashish Vaswani -->
+            <div class="bg-gradient-to-br from-teal-50 to-teal-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
+                <img src="https://placehold.co/150x150/f0fdfa/0f766e?text=Ashish+Vaswani" alt="Picture of Ashish Vaswani" class="w-32 h-32 rounded-full mb-4 ring-4 ring-teal-300 object-cover">
+                <h2 class="text-2xl font-bold text-gray-800">Ashish Vaswani</h2>
+                <p class="text-sm font-medium text-gray-500 mt-1">2017 - Present</p>
+                <a href="Vaswani.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-teal-500 to-green-600 text-white font-bold rounded-full shadow-lg hover:from-teal-600 hover:to-green-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-teal-300">
+                    View Interactive Slides
+                </a>
+            </div>
+
+        </section>
+
+    </div>
 </body>
 </html>
