--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <!-- Pioneer: George Boole -->
             <div class="bg-gradient-to-br from-blue-50 to-blue-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
-                <img src="https://static.independent.co.uk/s3fs-public/thumbnails/image/2015/11/02/08/georgeboole.jpg?width=1200&height=1200&fit=crop
+                <img src="https://cdn.britannica.com/68/6768-050-A7F2D15C/engraving-George-Boole.jpg"
                 <h2 class="text-2xl font-bold text-gray-800">George Boole</h2>
                 <p class="text-sm font-medium text-gray-500 mt-1">1815 - 1864</p>
                 <a href="Boole.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-blue-500 to-cyan-600 text-white font-bold rounded-full shadow-lg hover:from-blue-600 hover:to-cyan-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-blue-300">
