--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <!-- Pioneer: Alan Turing -->
             <div class="bg-gradient-to-br from-purple-50 to-purple-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
-                <img src="https://placehold.co/150x150/f3e8ff/7c3aed?text=Alan+Turing" alt="Picture of Alan Turing" class="w-32 h-32 rounded-full mb-4 ring-4 ring-purple-300 object-cover">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ce/Alan_turing_header.jpg/250px-Alan_turing_header.jpg" alt="Picture of Alan Turing" class="w-32 h-32 rounded-full mb-4 ring-4 ring-purple-300 object-cover">
                 <h2 class="text-2xl font-bold text-gray-800">Alan Turing</h2>
                 <p class="text-sm font-medium text-gray-500 mt-1">1912 - 1954</p>
                 <a href="Turing.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-purple-500 to-pink-600 text-white font-bold rounded-full shadow-lg hover:from-purple-600 hover:to-pink-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-purple-300">
