--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             
             <!-- Pioneer: Al-Khwarizmi -->
             <div class="bg-gradient-to-br from-indigo-50 to-indigo-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Al-Khwarizmi.jpg" alt="Picture of Al-Khwarizmi" class="w-32 h-32 rounded-full mb-4 ring-4 ring-indigo-300 object-cover">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR2QzeRyASOq4rX_Ek3RNI-AMtDj8bA2vlyaw&s" alt="Picture of Al-Khwarizmi" class="w-32 h-32 rounded-full mb-4 ring-4 ring-indigo-300 object-cover">
                 <h2 class="text-2xl font-bold text-gray-800">Al-Khwarizmi</h2>
                 <p class="text-sm font-medium text-gray-500 mt-1">c. 780 - c. 850</p>
                 <a href="Khwarizimi.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-indigo-500 to-purple-600 text-white font-bold rounded-full shadow-lg hover:from-indigo-600 hover:to-purple-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-purple-300">
