--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <!-- Pioneer: George Boole -->
             <div class="bg-gradient-to-br from-blue-50 to-blue-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a8/George_Boole.jpg" alt="Picture of George Boole" class="w-32 h-32 rounded-full mb-4 ring-4 ring-blue-300 object-cover">
+                <img src="https://cdn.prod.website-files.com/66c631b0c921652a9121abaa/66cdf300e5f8b3e27f6809fb_63332ba1f1a785129ef93c0b_62cc0dc595e303bebe421f6b_RWIg18WIBOvurrEnMnRn5d1uV9tDrzgtAc6rFJL8Cuz1GprPIzm7imZSdcItx9Y3J0NTHonRUKAPC0H8tneXAP8LsHwat3_6DB75054SEo7tSJrF_564eUm4KIXVCPID9qkaTuT3_AwfxQhuKw.png" alt="Picture of George Boole" class="w-32 h-32 rounded-full mb-4 ring-4 ring-blue-300 object-cover">
                 <h2 class="text-2xl font-bold text-gray-800">George Boole</h2>
                 <p class="text-sm font-medium text-gray-500 mt-1">1815 - 1864</p>
                 <a href="Boole.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-blue-500 to-cyan-600 text-white font-bold rounded-full shadow-lg hover:from-blue-600 hover:to-cyan-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-blue-300">
