--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR2QzeRyASOq4rX_Ek3RNI-AMtDj8bA2vlyaw&s" alt="Picture of Al-Khwarizmi" class="w-32 h-32 rounded-full mb-4 ring-4 ring-indigo-300 object-cover">
                 <h2 class="text-2xl font-bold text-gray-800">Al-Khwarizmi</h2>
                 <p class="text-sm font-medium text-gray-500 mt-1">c. 780 - c. 850</p>
-                <a href="Al Khwarizimi.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-indigo-500 to-purple-600 text-white font-bold rounded-full shadow-lg hover:from-indigo-600 hover:to-purple-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-purple-300">
+                <a href="Al-Khwarizimi.html" class="mt-6 w-full md:w-auto px-6 py-3 bg-gradient-to-r from-indigo-500 to-purple-600 text-white font-bold rounded-full shadow-lg hover:from-indigo-600 hover:to-purple-700 transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-4 focus:ring-purple-300">
                     View Interactive Slides
                 </a>
             </div>
