--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 To be a pioneer in artificial intelligence is to be a visionary who laid the foundational principles, charted new courses, and pushed the boundaries of what machines can do. These individuals, through their groundbreaking work, have fundamentally shaped our understanding of intelligence, computation, and the relationship between humans and machines, paving the way for the transformative technologies we see today.
             </p>
         </main>
-
+          <!-- Pioneers Grid -->
           <!-- Pioneer: Al-Khwarizmi -->
             <div class="bg-gradient-to-br from-indigo-50 to-indigo-100 rounded-2xl shadow-xl overflow-hidden transform transition-transform duration-300 hover:scale-105 p-6 flex flex-col items-center text-center">
                 <img src="https://as2.ftcdn.net/v2/jpg/02/45/07/77/1000_F_245077767_4FydZ8PgDJRuEwEpBfWaH5uzIrsZmrDh.jpg" alt="Picture of Al-Khwarizmi" class="w-32 h-32 rounded-full mb-4 ring-4 ring-indigo-300 object-cover">
